--- a/public/assets/css/bootstrap-dark.css
+++ b/public/assets/css/bootstrap-dark.css
@@ -13,7 +13,7 @@ File: Custom Bootstrap Css File
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #44a2d2;
+  --bs-blue: #36b9cc;
   --bs-indigo: #564ab1;
   --bs-purple: #777edd;
   --bs-pink: #ff679b;
@@ -26,7 +26,7 @@ File: Custom Bootstrap Css File
   --bs-white: #fff;
   --bs-gray: #8f93a4;
   --bs-gray-dark: #eff2f7;
-  --bs-primary: #44a2d2;
+  --bs-primary: #36b9cc;
   --bs-secondary: #8f93a4;
   --bs-success: #0acf97;
   --bs-info: #2d7bf4;
@@ -172,7 +172,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #44a2d2;
+  color: #36b9cc;
   text-decoration: none; }
   a:hover {
     color: #3682a8; }
@@ -204,7 +204,7 @@ pre {
 
 code {
   font-size: 0.875em;
-  color: #44a2d2;
+  color: #36b9cc;
   word-wrap: break-word; }
   a > code {
     color: inherit; }
@@ -2016,15 +2016,15 @@ textarea.form-control-lg {
     -webkit-box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.25);
             box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.25); }
   .form-check-input:checked {
-    background-color: #44a2d2;
-    border-color: #44a2d2; }
+    background-color: #36b9cc;
+    border-color: #36b9cc; }
     .form-check-input:checked[type="checkbox"] {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e"); }
     .form-check-input:checked[type="radio"] {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e"); }
   .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #44a2d2;
-    border-color: #44a2d2;
+    background-color: #36b9cc;
+    border-color: #36b9cc;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e"); }
   .form-check-input:disabled {
     pointer-events: none;
@@ -2089,7 +2089,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #44a2d2;
+    background-color: #36b9cc;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2115,7 +2115,7 @@ textarea.form-control-lg {
   .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #44a2d2;
+    background-color: #36b9cc;
     border: 0;
     border-radius: 1rem;
     -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2480,8 +2480,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #44a2d2;
-  border-color: #44a2d2; }
+  background-color: #36b9cc;
+  border-color: #36b9cc; }
   .btn-primary:hover {
     color: #fff;
     background-color: #3a8ab3;
@@ -2505,8 +2505,8 @@ textarea.form-control-lg {
               box-shadow: 0 0 0 0.15rem rgba(96, 176, 217, 0.5); }
   .btn-primary:disabled, .btn-primary.disabled {
     color: #fff;
-    background-color: #44a2d2;
-    border-color: #44a2d2; }
+    background-color: #36b9cc;
+    border-color: #36b9cc; }
 
 .btn-secondary {
   color: #fff;
@@ -2779,26 +2779,26 @@ textarea.form-control-lg {
     border-color: #eff2f7; }
 
 .btn-outline-primary {
-  color: #44a2d2;
-  border-color: #44a2d2; }
+  color: #36b9cc;
+  border-color: #36b9cc; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #44a2d2;
-    border-color: #44a2d2; }
+    background-color: #36b9cc;
+    border-color: #36b9cc; }
   .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
     -webkit-box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5);
             box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5); }
   .btn-check:checked + .btn-outline-primary,
   .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
     color: #fff;
-    background-color: #44a2d2;
-    border-color: #44a2d2; }
+    background-color: #36b9cc;
+    border-color: #36b9cc; }
     .btn-check:checked + .btn-outline-primary:focus,
     .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
       -webkit-box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5);
               box-shadow: 0 0 0 0.15rem rgba(68, 162, 210, 0.5); }
   .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-    color: #44a2d2;
+    color: #36b9cc;
     background-color: transparent; }
 
 .btn-outline-secondary {
@@ -3010,7 +3010,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #44a2d2;
+  color: #36b9cc;
   text-decoration: none; }
   .btn-link:hover {
     color: #3682a8; }
@@ -3354,7 +3354,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #44a2d2;
+  color: #36b9cc;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
   @media (prefers-reduced-motion: reduce) {
@@ -3401,7 +3401,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #44a2d2; }
+  background-color: #36b9cc; }
 
 .nav-fill > .nav-link,
 .nav-fill .nav-item {
@@ -4073,8 +4073,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #44a2d2;
-  border-color: #44a2d2; }
+  background-color: #36b9cc;
+  border-color: #36b9cc; }
 
 .page-item.disabled .page-link {
   color: #8f93a4;
@@ -4260,7 +4260,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #44a2d2;
+  background-color: #36b9cc;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
@@ -4332,8 +4332,8 @@ textarea.form-control-lg {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #44a2d2;
-    border-color: #44a2d2; }
+    background-color: #36b9cc;
+    border-color: #36b9cc; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -5479,7 +5479,7 @@ textarea.form-control-lg {
   content: ""; }
 
 .link-primary {
-  color: #44a2d2; }
+  color: #36b9cc; }
   .link-primary:hover, .link-primary:focus {
     color: #3682a8; }
 
@@ -5812,7 +5812,7 @@ textarea.form-control-lg {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #44a2d2 !important; }
+  border-color: #36b9cc !important; }
 
 .border-secondary {
   border-color: #8f93a4 !important; }
@@ -6522,7 +6522,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #44a2d2 !important; }
+  color: #36b9cc !important; }
 
 .text-secondary {
   color: #8f93a4 !important; }
@@ -6570,7 +6570,7 @@ textarea.form-control-lg {
   color: inherit !important; }
 
 .bg-primary {
-  background-color: #44a2d2 !important; }
+  background-color: #36b9cc !important; }
 
 .bg-secondary {
   background-color: #8f93a4 !important; }
@@ -8829,7 +8829,7 @@ label {
   width: 10px; }
 
 [data-simplebar-primary] .simplebar-scrollbar:before {
-  background: #44a2d2; }
+  background: #36b9cc; }
 
 [data-simplebar-secondary] .simplebar-scrollbar:before {
   background: #8f93a4; }
@@ -8929,14 +8929,14 @@ label {
   background-color: #349ace !important; }
 
 .bg-soft-primary {
-  color: #44a2d2;
+  color: #36b9cc;
   background-color: rgba(68, 162, 210, 0.18); }
   .bg-soft-primary[href] {
-    color: #44a2d2;
+    color: #36b9cc;
     text-decoration: none;
     background-color: rgba(68, 162, 210, 0.4); }
     .bg-soft-primary[href]:hover, .bg-soft-primary[href]:focus {
-      color: #44a2d2;
+      color: #36b9cc;
       text-decoration: none;
       background-color: rgba(68, 162, 210, 0.4); }
 
@@ -9096,11 +9096,11 @@ button, a {
   color: #eff2f7 !important; }
 
 .btn-soft-primary {
-  color: #44a2d2;
+  color: #36b9cc;
   background-color: rgba(68, 162, 210, 0.25); }
   .btn-soft-primary:hover {
     color: #fff;
-    background-color: #44a2d2; }
+    background-color: #36b9cc; }
 
 .btn-soft-secondary {
   color: #8f93a4;
@@ -9323,7 +9323,7 @@ button, a {
   line-height: 38px;
   text-align: center;
   background-color: #21253e;
-  color: #44a2d2;
+  color: #36b9cc;
   border-radius: 50%; }
 
 .badge-icon .icon-badge {
@@ -9354,7 +9354,7 @@ button, a {
       border: none; }
       .nav-tabs-custom .nav-item .nav-link::after {
         content: "";
-        background: #44a2d2;
+        background: #36b9cc;
         height: 2px;
         position: absolute;
         width: 100%;
@@ -9365,7 +9365,7 @@ button, a {
         -webkit-transform: scale(0);
                 transform: scale(0); }
       .nav-tabs-custom .nav-item .nav-link.active {
-        color: #44a2d2; }
+        color: #36b9cc; }
         .nav-tabs-custom .nav-item .nav-link.active:after {
           -webkit-transform: scale(1);
                   transform: scale(1); }
@@ -9397,8 +9397,8 @@ button, a {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus,
 .page-item.active .page-link {
-  background: #44a2d2;
-  border-color: #44a2d2; }
+  background: #36b9cc;
+  border-color: #36b9cc; }
 
 /*-- Costum --*/
 .pagination .page-link {
@@ -9426,14 +9426,14 @@ button, a {
 .custom-pagination .active .page-link {
   background-color: rgba(68, 162, 210, 0.15);
   border: 1px solid rgba(68, 162, 210, 0.5);
-  color: #44a2d2;
+  color: #36b9cc;
   border-radius: 50%; }
 
 .custom-pagination2 li {
   vertical-align: middle; }
 
 .custom-pagination2 span {
-  color: #44a2d2;
+  color: #36b9cc;
   background-color: rgba(68, 162, 210, 0.15);
   border: 1px solid rgba(68, 162, 210, 0.5);
   width: 36px;
@@ -9471,7 +9471,7 @@ button, a {
   height: 10px; }
 
 .progress-bar {
-  background-color: #44a2d2; }
+  background-color: #36b9cc; }
 
 .progress-animated {
   width: 0;
